better mobile design

--- a/decorations/index.html
+++ b/decorations/index.html
@@ -27,7 +27,7 @@
           </div>
         </a>
 
-        <div class="row note gx-3 gy-2 align-items-center pb-3">
+        <div class="row note gx-1 gy-2 align-items-center pb-2">
           <div class="col-md-6 col-sm-12 position-relative">
 
             <div class="input-group">
@@ -37,7 +37,7 @@
                 aria-expanded="false">
                 <i class="bi bi-funnel"></i>
               </button>
-              <ul class="dropdown-menu dropdown-menu-end p-3" style="min-width: 200px;">
+              <ul class="dropdown-menu dropdown-menu-custom p-2" style="min-width: 200px;">
                 <li>
                   <div class="form-check">
                     <input class="form-check-input search-filter" type="checkbox" value="name" id="filterName" checked>
