--- a/building_items/index.html
+++ b/building_items/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GGE Construction Items</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="./styles.css" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 mb-2 fixed-top-bar">
+      <div class="col-12 mb-2">
         <div class="col-12 page-title">
           <h1>GGE CONSTRUCTION ITEMS</h1>
         </div>
@@ -27,8 +27,7 @@
           </div>
         </a>
 
-        <div class="row note gx-3 gy-2 align-items-center pb-3">
-
+        <div class="row note gx-1 gy-2 align-items-center pb-2">
           <div class="col-md-4 col-sm-12 position-relative">
             <div class="input-group">
               <input id="searchInput" class="form-control custom-input" type="search"
@@ -37,7 +36,7 @@
                 aria-expanded="false">
                 <i class="bi bi-funnel"></i>
               </button>
-              <ul class="dropdown-menu dropdown-menu-end p-3" style="min-width: 200px;">
+              <ul class="dropdown-menu dropdown-menu-custom p-2" style="min-width: 200px;">
                 <li>
                   <div class="form-check">
                     <input class="form-check-input search-filter" type="checkbox" value="name" id="filterName" checked>
@@ -60,19 +59,43 @@
               </ul>
             </div>
           </div>
+
           <div class="col-md-4 col-sm-12">
-            <select id="durationFilter" class="form-select custom-select text-center" aria-label="Filter by type">
-              <option value="all" selected>Show all items</option>
-              <option value="permanent">Permanent items</option>
-              <option value="temporary">Temporary items</option>
-            </select>
+            <div class="dropdown">
+              <button class="btn btn-custom dropdown-toggle w-100" type="button" id="typeDropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Type Filter
+              </button>
+              <ul class="dropdown-menu dropdown-menu-custom w-100 p-2" aria-labelledby="typeDropdown" id="typeFilters">
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input type-filter" type="checkbox" value="permanent" id="filterPermanent"
+                      checked>
+                    <label class="form-check-label" for="filterPermanent">Permanent</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input type-filter" type="checkbox" value="temporary" id="filterTemporary"
+                      checked>
+                    <label class="form-check-label" for="filterTemporary">Temporary</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input type-filter" type="checkbox" value="appearance" id="filterAppearance"
+                      checked>
+                    <label class="form-check-label" for="filterAppearance">Appearance</label>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="col-md-4 col-sm-12">
-            <select id="appearanceFilter" class="form-select custom-select text-center"
-              aria-label="Filter Appearance items">
+            <select id="showFilter" class="form-select custom-select text-center" aria-label="Show filter">
               <option value="all" selected>Show all items</option>
-              <option value="hide">Hide Appearance items</option>
+              <option value="new">Show only new items</option>
             </select>
           </div>
         </div>
