--- a/wall_limit/index.html
+++ b/wall_limit/index.html
@@ -49,6 +49,7 @@
                 <option value="6">Level 6</option>
                 <option value="7">Level 7</option>
                 <option value="8">Level 8</option>
+                <option value="9">Level 9</option>
               </select>
             </div>
             <div class="col-sm-0 col-lg-6"></div>
