--- a/index.html
+++ b/index.html
@@ -15,35 +15,15 @@
 
 <body>
     <div class="container">
+        <a href="https://www.youtube.com/@GeneralsCamp" class="home-icon-link" target="_blank">
+            <div class="home-icon">
+                <i class="bi bi-youtube"></i>
+            </div>
+        </a>
+
         <div class="row">
             <div class="col-12 mb-2">
                 <h1>GENERALS FORUM</h1>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="https://www.youtube.com/@GeneralsCamp" class="box">
-                    <div class="box-icon">
-                        <img src="https://pngimg.com/d/youtube_button_PNG20.png" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>My YouTube channel</h2>
-                        <hr>
-                        <p>You can find many guide & update review videos here!</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="https://discord.com/invite/goodgamestudios" class="box">
-                    <div class="box-icon">
-                        <img src="https://pngimg.com/d/discord_PNG7.png" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>GGE Discord Server</h2>
-                        <hr>
-                        <p>Join the official Empire community!</p>
-                    </div>
-                </a>
             </div>
 
             <div class="col-md-6 col-sm-12">
@@ -136,31 +116,6 @@
                     </div>
                 </a>
             </div>
-            <!--
-            <div class="col-md-6 col-sm-12">
-                <a href="./courtyard_limit/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/cy-limit-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Courtyard Limit Calculator</h2>
-                        <hr>
-                        <p>Calculate your courtyard unit limit with absolute accuracy.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-6 col-sm-12">
-                <a href="./brewery_simulator/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/brewery-simulator-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Brewery Simulator</h2>
-                        <hr>
-                        <p>Calculate your in-game mead & honey production easily.</p>
-                    </div>
-                </a>
-            </div>
             <div class="col-md-6 col-sm-12">
                 <a href="./battle_simulator/index.html" class="box" disabled>
                     <div class="box-icon">
@@ -173,7 +128,6 @@
                     </div>
                 </a>
             </div>
-            -->
         </div>
     </div>
 </body>
