--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -134,6 +134,11 @@
                             <div class="col">Fullscreen mode</div>
                             <div class="col"><button id="fullscreenBtn" class="btn">OFF</button></div>
                         </div>
+                        <!-- Transparency -->
+                        <div class="row building-info pt-2 pb-2">
+                            <div class="col">Transparent mode</div>
+                            <div class="col"><button id="transparencyToggle" class="btn">OFF</button></div>
+                        </div>
                     </div>
                 </div>
 
@@ -212,6 +217,8 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
+
 </body>
 
 </html>
