--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -139,6 +139,11 @@
                             <div class="col">Transparent mode</div>
                             <div class="col"><button id="transparencyToggle" class="btn">OFF</button></div>
                         </div>
+                        <!-- Collision while moving -->
+                        <div class="row building-info pt-2 pb-2">
+                            <div class="col">Collision while moving</div>
+                            <div class="col"><button id="collisionToggle" class="btn">OFF</button></div>
+                        </div>
                     </div>
                 </div>
 
