--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="container mt-4">
+    <div class="container">
         <div class="row">
             <div class="col-12" onmousemove="moveBuilding(event)" onmouseup="stopMovingBuilding()"
                 oncontextmenu="removeBuilding(event)">
@@ -70,7 +70,7 @@
 
                         <div class="col-4">
                             <input type="text" id="buildingSearch" class="form-control"
-                                placeholder="Search buildings by name">
+                                placeholder="Search by name">
                         </div>
 
                         <div class="col-4">
@@ -129,11 +129,6 @@
                             <div class="col">Add expansions</div>
                             <div class="col"><button id="grid-expand-toggle" class="btn">OFF</button></div>
                         </div>
-                        <!-- Fullscreen -->
-                        <div class="row building-info pt-2 pb-2">
-                            <div class="col">Fullscreen mode</div>
-                            <div class="col"><button id="fullscreenBtn" class="btn">OFF</button></div>
-                        </div>
                         <!-- Transparency -->
                         <div class="row building-info pt-2 pb-2">
                             <div class="col">Transparent mode</div>
@@ -144,9 +139,13 @@
                             <div class="col">Collision while moving</div>
                             <div class="col"><button id="collisionToggle" class="btn">OFF</button></div>
                         </div>
+                        <!-- Fullscreen -->
+                        <div class="row building-info pt-2 pb-2">
+                            <div class="col">Fullscreen mode</div>
+                            <div class="col"><button id="fullscreenBtn" class="btn">OFF</button></div>
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
