--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -79,7 +79,7 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Size Filter
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-custom p-2" id="sizeFilters">
+                                <ul class="dropdown-menu dropdown-menu-custom w-100" id="sizeFilters">
                                 </ul>
                             </div>
                         </div>
