--- a/building_items/index.html
+++ b/building_items/index.html
@@ -27,7 +27,7 @@
           </div>
         </a>
 
-        <div class="row note gx-1 gy-2 align-items-center pb-2">
+        <div class="row note gx-1 gy-1 align-items-center pb-2">
           <div class="col-md-4 col-sm-12 position-relative">
             <div class="input-group">
               <input id="searchInput" class="form-control custom-input" type="search"
@@ -36,7 +36,7 @@
                 aria-expanded="false">
                 <i class="bi bi-funnel"></i>
               </button>
-              <ul class="dropdown-menu dropdown-menu-custom p-2" style="min-width: 200px;">
+              <ul class="dropdown-menu dropdown-menu-custom" style="min-width: 200px;">
                 <li>
                   <div class="form-check">
                     <input class="form-check-input search-filter" type="checkbox" value="name" id="filterName" checked>
@@ -66,7 +66,7 @@
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Type Filter
               </button>
-              <ul class="dropdown-menu dropdown-menu-custom w-100 p-2" aria-labelledby="typeDropdown" id="typeFilters">
+              <ul class="dropdown-menu dropdown-menu-custom w-100" aria-labelledby="typeDropdown" id="typeFilters">
                 <li>
                   <div class="form-check">
                     <input class="form-check-input type-filter" type="checkbox" value="permanent" id="filterPermanent"
