--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GGE Asset Downloader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
 
@@ -31,7 +32,8 @@
                 </h2>
                 <div class="collapse show   row gx-1 gy-1 align-items-center pb-2">
                     <button id="selectFolder" class="btn btn-warning col-md-4 col-sm-12">Select Folder</button>
-                    <button id="startDownload" class="btn btn-success col-md-4 col-sm-12" disabled>Start Download</button>
+                    <button id="startDownload" class="btn btn-success col-md-4 col-sm-12" disabled>Start
+                        Download</button>
                     <button id="stopDownload" class="btn btn-danger col-md-4 col-sm-12" disabled>Stop Download</button>
                 </div>
                 <div class="progress m-2">
