--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -36,11 +36,48 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                        <button id="startDownload" class="btn custom-start-button w-100" disabled>Start Download</button>
+                        <button id="startDownload" class="btn custom-start-button w-100" disabled>Start
+                            Download</button>
                     </div>
 
                     <div class="col-md-4 col-sm-12">
                         <button id="stopDownload" class="btn custom-stop-button w-100" disabled>Stop Download</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 mb-2 collapse-area">
+                <h2 class="collapse-header">
+                    <span class="header-title">OPTIONS</span>
+                </h2>
+                <div class="row note gx-1 gy-1 p-1">
+                    <div class="col-6 col-md-3">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" id="optAssets" checked>
+                            <span class="checkmark"></span>
+                            Assets
+                        </label>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" id="optItems" checked>
+                            <span class="checkmark"></span>
+                            Items
+                        </label>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" id="optLang" checked>
+                            <span class="checkmark"></span>
+                            Lang (EN)
+                        </label>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" id="optDll" checked>
+                            <span class="checkmark"></span>
+                            DLL
+                        </label>
                     </div>
                 </div>
             </div>
