--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -87,7 +87,10 @@
                     <span class="header-title">DOWNLOAD LOG</span>
                 </h2>
                 <div class="progress">
-                    <div id="downloadProgress" class="progress-bar" role="progressbar" style="width: 0%">0 / 0</div>
+                    <div id="downloadProgress" class="progress-bar" role="progressbar" style="width: 0%">
+                        <span class="progress-text">By: Dániel (@generalscamp)
+                        </span>
+                    </div>
                 </div>
                 <div class="collapse show p-2 pb-0">
                     <pre id="log"></pre>
