--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -88,7 +88,7 @@
                 </h2>
                 <div class="progress">
                     <div id="downloadProgress" class="progress-bar" role="progressbar" style="width: 0%">
-                        <span class="progress-text">By: Dániel (@generalscamp)
+                        <span class="progress-text">By: Dániel (@GeneralsCamp)
                         </span>
                     </div>
                 </div>
