--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -20,11 +20,13 @@
                 <h1>GGE ASSETS DOWNLOADER</h1>
             </div>
 
-            <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+            <a href="https://docs.google.com/document/d/1dJq2DaZ4ZQvfUjDTUSn5ugbVtDVTvR3A/edit?usp=sharing&ouid=116673383453349176575&rtpof=true&sd=true"
+                class="home-icon-link" target="_blank">
                 <div class="home-icon">
-                    <i class="bi bi-house"></i>
+                    <i class="bi bi-file-earmark-text"></i>
                 </div>
             </a>
+
 
             <div class="col-12 mb-2 collapse-area">
                 <h2 class="collapse-header">
