--- a/building_items/index.html
+++ b/building_items/index.html
@@ -36,7 +36,7 @@
                 aria-expanded="false">
                 <i class="bi bi-funnel"></i>
               </button>
-              <ul class="dropdown-menu dropdown-menu-custom" style="min-width: 200px;">
+              <ul class="dropdown-menu dropdown-menu-custom">
                 <li>
                   <div class="form-check">
                     <input class="form-check-input search-filter" type="checkbox" value="name" id="filterName" checked>
