--- a/food_calculator/index.html
+++ b/food_calculator/index.html
@@ -184,7 +184,7 @@
                             </div>
 
                             <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                <label for="">Effect Deco Bonus (%)</label>
+                                <label for="">Effect Deco Bonus</label>
                                 <input class="form-control" type="number" name="deco2" id="deco2" placeholder="e.g. 40%"
                                     min="0" step="5">
                             </div>
