--- a/food_calculator/index.html
+++ b/food_calculator/index.html
@@ -66,9 +66,9 @@
                                 </select>
                             </div>
                             <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                <label for="">Villages Bonus (%)</label>
+                                <label for="">Villages Bonus</label>
                                 <input required type="number" name="villages" id="villages" class="form-select"
-                                    placeholder="e.g. 400" min="0">
+                                    placeholder="e.g. 400%" min="0">
                             </div>
 
                             <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
