--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GGE Assets Downloader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
-
+    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -27,7 +27,6 @@
                 </div>
             </a>
 
-
             <div class="col-12 mb-2 collapse-area">
                 <h2 class="collapse-header">
                     <span class="header-title">CONTROLS</span>
@@ -36,12 +35,10 @@
                     <div class="col-md-4 col-sm-12">
                         <button id="selectFolder" class="btn custom-folder-button w-100">Select Folder</button>
                     </div>
-
                     <div class="col-md-4 col-sm-12">
                         <button id="startDownload" class="btn custom-start-button w-100" disabled>Start
                             Download</button>
                     </div>
-
                     <div class="col-md-4 col-sm-12">
                         <button id="stopDownload" class="btn custom-stop-button w-100" disabled>Stop Download</button>
                     </div>
@@ -90,8 +87,7 @@
                 </h2>
                 <div class="progress">
                     <div id="downloadProgress" class="progress-bar" role="progressbar" style="width: 0%">
-                        <span class="progress-text">By: Dániel (@GeneralsCamp)
-                        </span>
+                        <span class="progress-text">By: Dániel (@GeneralsCamp)</span>
                     </div>
                 </div>
                 <div class="collapse show p-2 pb-0">
@@ -102,6 +98,10 @@
     </div>
 
     <script src="./downloader.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
