--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@0.5.0-beta4/dist/html2canvas.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Castle Layout Editor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
-    <meta charset="UTF-8">
     <meta name="description" content="Efficient castle layout editor for Goodgame Empire & Empire: Four Kingdoms!">
     <link rel="stylesheet" href="styles.css">
-    <title>Castle Layout Editor</title>
 </head>
 
 <body>
@@ -69,8 +65,7 @@
                     <div class="row w-100 g-2">
 
                         <div class="col-4">
-                            <input type="text" id="buildingSearch" class="form-control"
-                                placeholder="Search by name">
+                            <input type="text" id="buildingSearch" class="form-control" placeholder="Search by name">
                         </div>
 
                         <div class="col-4">
@@ -221,8 +216,9 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
