--- a/collector_calculator/index.html
+++ b/collector_calculator/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collector Event Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
-        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
-    <link rel="stylesheet" href="./styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -33,16 +32,18 @@
                     <span class="header-title">INPUT</span>
                 </h2>
                 <div class="collapse show">
-                    <form class="calculator-bonuses-form" onsubmit="return false;">
+                    <form class="calculator-bonuses-form">
 
-                        <div class="col-lg-4 col-md-6 col-sm-12 form-group">
+                        <div class="col-12 form-group">
                             <label for="pointsTarget">How many points you want at the end:</label>
-                            <input type="number" id="pgge-points" class="form-control2" placeholder="e.g., 80000" min="0" max="1000000" oninput="calculate()">
+                            <input type="number" id="pgge-points" class="form-control" placeholder="e.g., 80000"
+                                min="0" max="100000" step="1000">
                         </div>
 
-                        <div class="col-lg-4 col-md-6 col-sm-12 form-group">
-                            <label for="remainingTime">Remaining event time (days):</label>
-                            <input type="number" id="pgge-time" class="form-control2" placeholder="e.g., 4" min="0" max="7" step="1" oninput="calculate()">
+                        <div class="col-12 form-group">
+                            <label for="remainingTime">Days left until the end of the event:</label>
+                            <input type="number" id="pgge-time" class="form-control" placeholder="e.g., 4 days" min="0"
+                                max="7" step="1">
                         </div>
 
                     </form>
@@ -61,6 +62,9 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
