--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -52,26 +52,33 @@
                 <div class="row note gx-1 gy-1 p-1">
                     <div class="col-6 col-md-3">
                         <label class="custom-checkbox">
-                            <input type="checkbox" id="optAssets" checked>
+                            <input type="checkbox" id="optAssetsWebp" checked>
                             <span class="checkmark"></span>
-                            Assets
+                            Assets (WEBP)
                         </label>
                     </div>
                     <div class="col-6 col-md-3">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" id="optAssetsPng">
+                            <span class="checkmark"></span>
+                            Assets (PNG)
+                        </label>
+                    </div>
+                    <div class="col-6 col-md-2">
                         <label class="custom-checkbox">
                             <input type="checkbox" id="optItems" checked>
                             <span class="checkmark"></span>
                             Items
                         </label>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-2">
                         <label class="custom-checkbox">
                             <input type="checkbox" id="optLang" checked>
                             <span class="checkmark"></span>
                             Lang (EN)
                         </label>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-2">
                         <label class="custom-checkbox">
                             <input type="checkbox" id="optDll" checked>
                             <span class="checkmark"></span>
