--- a/building_items/index.html
+++ b/building_items/index.html
@@ -104,6 +104,15 @@
 
       <main id="content" class="container-fluid">
         <div id="cards" class="row g-1"></div>
+
+        <div id="loadingBox" class="loading-message">
+          <h3 id="loadingStatus">Initializing...</h3>
+          <div class="progress">
+            <div id="loadingProgress" class="progress-bar"></div>
+            <span id="loadingPercentText" class="progress-text">0%</span>
+          </div>
+        </div>
+
       </main>
     </div>
   </div>
