--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
 
         <div class="row">
-            <div class="col-12 mb-2">
+            <div class="col-12">
                 <h1>GENERALS FORUM</h1>
             </div>
 
