--- a/building_items/index.html
+++ b/building_items/index.html
@@ -88,6 +88,19 @@
                     <label class="form-check-label" for="filterAppearance">Appearance</label>
                   </div>
                 </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input type-filter" type="checkbox" value="primary" id="filterPrimary"
+                      checked>
+                    <label class="form-check-label" for="filterPrimary">Primary</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input type-filter" type="checkbox" value="relic" id="filterRelic" checked>
+                    <label class="form-check-label" for="filterRelic">Relic</label>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
