--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-md-6 col-sm-12">
+                <a href="./travel_speed/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/travel_speed.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Travel Speed Calculator</h2>
+                        <hr>
+                        <p>Calculate the exact land time of your attack.</p>
+                    </div>
+                </a>
+            </div>
+
             <div class="col-md-6 col-sm-12">
                 <a href="./battle_simulator/index.html" class="box" disabled>
                     <div class="box-icon">
