--- a/assets_downloader/index.html
+++ b/assets_downloader/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-12 mb-2 collapse-area">
                 <h2 class="collapse-header">
                     <span class="header-title">OPTIONS</span>
@@ -53,30 +53,57 @@
 
                     <div class="col-md-6 col-sm-12">
                         <select id="optAssets" class="form-select custom-select text-center">
-                            <option value="png" selected>Assets (PNG)</option>
+                            <option value="no" selected>No assets</option>
+                            <option value="png">Assets (PNG)</option>
                             <option value="webp">Assets (WEBP)</option>
-                            <option value="no">No assets</option>
-                        </select>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12">
-                        <select id="optItems" class="form-select custom-select text-center">
-                            <option value="items" selected>items.json</option>
-                            <option value="no-items">No items.json</option>
-                        </select>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12">
-                        <select id="optLang" class="form-select custom-select text-center">
-                            <option value="lang" selected>lang.json</option>
-                            <option value="no-dll">No lang.json</option>
                         </select>
                     </div>
 
                     <div class="col-md-6 col-sm-12">
                         <select id="optDll" class="form-select custom-select text-center">
-                            <option value="dll" selected>DLL.js</option>
-                            <option value="no-dll">No DLL.js</option>
+                            <option value="no-dll" selected>No DLL.js</option>
+                            <option value="dll">DLL.js</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6 col-sm-12">
+                        <select id="optItems" class="form-select custom-select text-center">
+                            <option value="no-items" selected>No items.json</option>
+                            <option value="items">items.json</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6 col-sm-12">
+                        <select id="optLang" class="form-select custom-select text-center">
+                            <option value="no-lang" selected>No lang.json</option>
+                            <option value="all">All languages</option>
+                            <option value="en">English</option>
+                            <option value="de">Deutsch</option>
+                            <option value="hu">Magyar</option>
+                            <option value="fr">Français</option>
+                            <option value="es">Español</option>
+                            <option value="pt">Português</option>
+                            <option value="it">Italiano</option>
+                            <option value="nl">Nederlands</option>
+                            <option value="sv">Svenska</option>
+                            <option value="da">Dansk</option>
+                            <option value="fi">Suomi</option>
+                            <option value="cs">Čeština</option>
+                            <option value="sk">Slovenčina</option>
+                            <option value="pl">Polski</option>
+                            <option value="ro">Română</option>
+                            <option value="bg">Български</option>
+                            <option value="ru">Русский</option>
+                            <option value="el">Ελληνικά</option>
+                            <option value="tr">Türkçe</option>
+                            <option value="ar">العربية</option>
+                            <option value="ja">日本語</option>
+                            <option value="ko">한국어</option>
+                            <option value="id">Bahasa Indonesia</option>
+                            <option value="zh_CN">中文 (简体)</option>
+                            <option value="zh_TW">中文 (繁體)</option>
+                            <option value="lt">Lietuvių</option>
+                            <option value="no">Norsk</option>
                         </select>
                     </div>
                 </div>
