--- a/competition/index.html
+++ b/competition/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>GGE Discord Verseny</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous" />
-    <link rel="icon" type="image/webp" href="./img_base/favicon.ico" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
-        rel="stylesheet" />
+
+    <meta property="og:title" content="Goodgame Empire Kvíz" />
+    <meta property="og:description" content="GGE & E4K Discord verseny" />
+    <meta property="og:url" content="https://generalscamp.github.io/forum/competition/" />
+    <meta property="og:type" content="website" />
+    <meta name="author" content="Dániel (@GeneralsCamp)">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <link rel="stylesheet" href="styles.css" />
 </head>
 
