--- a/brewery_simulator/index.html
+++ b/brewery_simulator/index.html
@@ -93,7 +93,7 @@
               </div>
               <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
                 <label for="Apo">Public order</label>
-                <input class="form-control" type="number" value="0" id="po">
+                <input class="form-control" type="number" value="0" min="0" id="po" placeholder="e.g. 124000">
               </div>
               <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
                 <label for="Aoverseer">Honey overseer</label>
