--- a/brewery_simulator/index.html
+++ b/brewery_simulator/index.html
@@ -25,24 +25,6 @@
         </div>
       </a>
 
-      <div class="col-12 collapse-area mb-2 result">
-        <h2 class="collapse-header">
-          <span class="header-title">RESULTS</span>
-        </h2>
-        <div class="collapse show">
-          <form class="calculator-bonuses-form row" onsubmit="return false;">
-            <div class="collapse show results">
-              <p class="il">TOTAL HONEY PRODUCTION: <i id="honeyProd">0</i></p>
-              <hr>
-              <p>TOTAL MEAD PRODUCTION: <br> <i id="food">0</i> food + <i id="honey">0</i> honey = <i id="mead">0</i>
-                mead</p>
-              <hr>
-              <p class="il">NUMBER OF UNITS YOU CAN KEEP: <i id="unitsHold">0</i></p>
-            </div>
-          </form>
-        </div>
-      </div>
-
       <div class="col-12 collapse-area mb-2">
         <h2 class="collapse-header">
           <span class="header-title">HONEY PRODUCTION BONUSES</span>
@@ -464,6 +446,25 @@
           </div>
         </div>
       </div>
+
+      <div class="col-12 collapse-area mb-2 result">
+        <h2 class="collapse-header">
+          <span class="header-title">RESULTS</span>
+        </h2>
+        <div class="collapse show">
+          <form class="calculator-bonuses-form row" onsubmit="return false;">
+            <div class="collapse show results">
+              <p class="il">TOTAL HONEY PRODUCTION: <i id="honeyProd">0</i> /hour</p>
+              <hr>
+              <p>TOTAL MEAD PRODUCTION: <br> <i id="food">0</i> food + <i id="honey">0</i> honey = <i id="mead">0</i>
+                mead</p>
+              <hr>
+              <p class="il">NUMBER OF UNITS YOU CAN KEEP: <i id="unitsHold">0</i></p>
+            </div>
+          </form>
+        </div>
+      </div>
+
     </div>
   </div>
 
