--- a/decorations/index.html
+++ b/decorations/index.html
@@ -71,7 +71,7 @@
             <select id="showFilter" class="form-select custom-select text-center" aria-label="Show filter">
               <option value="all" selected>Show all decorations</option>
               <option value="new">Show only new decorations</option>
-              <option id="lastCapOption" value="" disabled>Last selected effect cap</option>
+              <option id="lastCapOption" value="" disabled>Selected effect</option>
             </select>
           </div>
 
