--- a/travel_speed/index.html
+++ b/travel_speed/index.html
@@ -41,12 +41,12 @@
                             <input type="number" id="speed" step="1" value="15" class="form-control">
                         </div>
                         <div class="col-md-4 col-6  form-group">
-                            <label for="distance">Army size</label>
+                            <label for="distance">Army Size</label>
                             <input type="number" id="attackerUnits" value="0" min="1" max="100000" class="form-control"
                                 step="1">
                         </div>
                         <div class="col-md-4 col-6 form-group">
-                            <label for="playerLevel">Your Player Level</label>
+                            <label for="playerLevel">Player Level</label>
                             <input type="number" id="playerLevel" step="1" value="20" min="0" max="1020"
                                 class="form-control">
                         </div>
@@ -121,15 +121,15 @@
                 <div class="collapse show">
                     <form class="calculator-bonuses-form row" onsubmit="return false;">
                         <div class="col-md-4 col-6 form-group">
-                            <label for="speed">Later detection</label>
+                            <label for="speed">Late Detection</label>
                             <input type="number" id="laterDetection" value="0" min="0" step="1" class="form-control">
                         </div>
                         <div class="col-md-4 col-6 form-group">
-                            <label for="playerLevel">Early detection</label>
+                            <label for="playerLevel">Early Detection</label>
                             <input type="number" id="earlyDetection" value="0" min="0" step="1" class="form-control">
                         </div>
                         <div class="col-md-4 col-6 form-group">
-                            <label for="sightBonus">Sight Radius Bonus</label>
+                            <label for="sightBonus">Watch Tower Bonus</label>
                             <input type="number" id="sightBonus" step="1" max="100" min="0" class="form-control"
                                 placeholder="max.100%">
                         </div>
